[package]
name = "custom-type"
version = "0.1.0"
edition = "2021"
description = "This crate provides utilities for parsing and validating various types of data such as emails, passwords, and phone numbers with country codes."
license = "MIT"
keywords = ["custom-type", "parser", "validation"]

[dependencies]
derive_more = "0.99.18"
regex = "1.10.5"
serde = {version = "1.0.204", features = ["derive"]}


[dev-dependencies]
serde_json = "1.0.120"